  $HeadURL$
  $Revision$
  $LastChangedBy$
  $Date$
  *******************************************************/

Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-09-27 [A] Added German language file {GauGau}
2010-09-27 [D] Slight documentation improvements {GauGau}
2010-09-27 [O] Added menu to admin.php permanently {GauGau}
2010-09-27 [M] Version count updated to 0.7 {GauGau}
2010-01-24 [O] Added minimum version info {GauGau}
2010-01-21 [M] Counted version up to 0.6 {GauGau}
2010-01-21 [O] Added admin.js {GauGau}
2010-01-21 [A] Added search meta album {GauGau}
2010-01-21 [A] Added config options {GauGau}
2010-01-21 [M] Counted version up to 0.5 {GauGau}
2010-01-21 [M] Version count updated to 0.4 {GauGau}
2010-01-21 [A] Added max col and max row setting {GauGau}
2010-01-21 [M] Version count updated to 0.4 {GauGau}
2010-01-21 [A] Added example stylesheet definition {GauGau}
2010-01-21 [A] Turned docs from HTML to PHP files to drop placeholders {GauGau}
2010-01-20 [M] Version count updated to 0.3 {GauGau}
2010-01-20 [O] Progressed with core files {GauGau}
2010-01-19 [M] Version count updated to 0.3 {GauGau}
2010-01-19 [D] Added todo list to docs {GauGau}
2010-01-19 [A] Added first draft of file that will fetch the JavaScript {GauGau}
2010-01-18 [A] Added working example to configuration screen {GauGau}
2010-01-18 [M] Added SVN:keywords properties {GauGau}
2010-01-18 [M] Added plugin to subversion repository {GauGau}
2010-01-18 [A] Added config screen {GauGau}
2010-01-18 [A] Added install/uninstall {GauGau}
2010-01-18 [A] Added i18n {GauGau}
2010-01-18 [M] Version count updated to 0.2 {GauGau}
2010-01-18 [M] Created changelog file {GauGau}